--- a/index.html
+++ b/index.html
@@ -88,18 +88,17 @@
         ::-webkit-scrollbar-track { background: #F0F4F8; }
         ::-webkit-scrollbar-thumb { background: #3A86FF; border-radius: 10px; }
     </style>
-    <link rel="stylesheet" href="/index.css">
 <script type="importmap">
 {
   "imports": {
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.89.0",
-    "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "framer-motion": "https://esm.sh/framer-motion@^12.24.8",
+    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.89.0",
     "path": "https://esm.sh/path@^0.12.7",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "framer-motion": "https://esm.sh/framer-motion@^12.24.8",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
@@ -107,6 +106,7 @@
 </head>
 <body class="mesh-gradient">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <!-- Entry point should be relative for Vite to process it correctly -->
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
