feat: Improve Supabase client initialization
Add stricter validation for Supabase URL and API key to prevent runtime errors. This ensures the Supabase client is only created when valid credentials are provided, falling back gracefully to LocalStorage mode otherwise.

Also, update Vite configuration to better support multiple environment variable naming conventions for Supabase credentials.

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 </head>
 <body class="mesh-gradient">
     <div id="root"></div>
-    <!-- Entry point should be relative for Vite to process it correctly -->
+    <!-- Script must be relative for Vite -->
     <script type="module" src="./index.tsx"></script>
 </body>
 </html>
