--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="./logo.png">
     <title>NitGyanam | Student Well-Being Portal</title>
+    <!-- Tailwind via CDN is fine for this deployment type, but we keep it here -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -106,7 +107,6 @@
 </head>
 <body class="mesh-gradient">
     <div id="root"></div>
-    <!-- Script must be relative for Vite -->
     <script type="module" src="./index.tsx"></script>
 </body>
 </html>
